# top_project0

./: README.md
TOP-project/: .gitignore  config.txt  config_1000.txt  config_500.txt  hsw05_cpuinfo.txt  hws01_cpuinfo.txt  init_performance.txt  ob1_cpuinfo.txt
TOP-project/reference/: ref_100.txt  ref_500.txt  ref_mac_100.txt  ref_mac_500.txt
TOP-project/scripts/: clean.sh  run_s.sh
TOP-project/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  libstencil.dylib  libutils.dylib  main.c  my_executable
TOP-project/src/stencil/: comm_handler.c  init.c  mesh.c
